--- a/Unitivo/Properties/Resources.resx
+++ b/Unitivo/Properties/Resources.resx
@@ -125,7 +125,7 @@
     <value>..\Resources\icons8-ventas-totales-48.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="DB_ConnectionString" xml:space="preserve">
-    <value>Server=(localdb)\localhost;Database=Unitivo;Integrated Security=True;Trust Server Certificate=True;</value>
+    <value>Data Source=.\SQLEXPRESS;Initial Catalog=Unitivo;Integrated Security=True;Connect Timeout=30;Encrypt=True;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False</value>
   </data>
   <data name="icons8-contactos-50" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\icons8-contactos-50.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -234,5 +234,8 @@
   </data>
   <data name="ventas" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\ventas.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="DB_BackupRestore" xml:space="preserve">
+    <value>Data Source=.\SQLEXPRESS;Initial Catalog=Unitivo;Integrated Security=True</value>
   </data>
 </root>
